# roserade

./: .coverage  .gitignore  AGENTS.md  README.md  pyproject.toml  rag.py  spec.md  store.py
src/roserade/cli/: main.py
src/roserade/core/: chunker.py  database.py  document_processor.py  embedder.py  indexer.py
src/roserade/models/: config.py
src/roserade/utils/: config.py
tests/: conftest.py
tests/fixtures/: sample_files.py
tests/integration/: test_cli.py
tests/unit/: test_chunker.py  test_database.py  test_document_processor.py
